Refactor disk analyzer